[gd_scene load_steps=9 format=2]

[ext_resource path="res://Entities/fire/fire.gd" type="Script" id=1]
[ext_resource path="res://Components/hitbox/hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/fire/fire.png" type="Texture" id=3]
[ext_resource path="res://Effects/Particles/smoke_particles.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="fire" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
ACCELERATION = 0
INANIMATE = true
truName = "fire"
smoke_particle = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 3
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.121569, 0.352941, 0.964706, 1 )
shape = SubResource( 1 )

[node name="hitbox" parent="." instance=ExtResource( 2 )]
COOLDOWN = 4.0
iTime = 0.0
DAM_TYPE = "burn"
KNOCKBACK = 0
STATUS_EFFECT = "burning"
STATUS_DURATION = 2.1

[node name="CollisionShape2D" parent="hitbox" index="0"]
shape = SubResource( 2 )

[node name="fire" type="AnimationPlayer" parent="."]
autoplay = "fire"
anims/fire = SubResource( 3 )

[node name="fuel" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true
__meta__ = {
"_editor_description_": ""
}

[node name="death" type="AnimationPlayer" parent="."]
anims/death = SubResource( 4 )

[node name="spread" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="fuel" to="." method="_on_fuel_timeout"]
[connection signal="timeout" from="spread" to="." method="_on_spread_timeout"]

[editable path="hitbox"]
